--- a/index.html
+++ b/index.html
@@ -4,6 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>موقع الكورسات</title>
+    <style>
+        /* الأساسيات */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: white;
+            color: #333;
+        }
+
+        .container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        /* الرأس (Header) */
+        header {
+            background-color: #007BFF; /* اللون الأزرق */
+            color: white;
+            padding: 20px 0;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        header nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        /* أقسام الكورسات */
+        section {
+            padding: 40px 0;
+            background-color: #f4f4f4; /* خلفية فاتحة */
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            color: #007BFF; /* اللون الأزرق */
+        }
+
+        section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        section ul li {
+            margin: 10px 0;
+        }
+
+        section ul li a {
+            text-decoration: none;
+            font-size: 18px;
+            color: #333;
+        }
+
+        section ul li a:hover {
+            color: #007BFF;
+        }
+
+        /* الفوتر (Footer) */
+        footer {
+            background-color: #007BFF; /* اللون الأزرق */
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <!-- الرأس (Header) -->
@@ -22,7 +108,7 @@
         </div>
     </header>
 
-    <!-- القسم المجاني -->
+    <!-- الأقسام -->
     <section id="free-courses">
         <div class="container">
             <h2>كورسات مجانية</h2>
@@ -34,7 +120,6 @@
         </div>
     </section>
 
-    <!-- القسم المدفوع -->
     <section id="paid-courses">
         <div class="container">
             <h2>كورسات مدفوعة</h2>
@@ -46,7 +131,6 @@
         </div>
     </section>
 
-    <!-- أبرز الكورسات -->
     <section id="top-courses">
         <div class="container">
             <h2>أبرز الكورسات</h2>
@@ -58,7 +142,6 @@
         </div>
     </section>
 
-    <!-- كورسات البرمجة -->
     <section id="programming-courses">
         <div class="container">
             <h2>كورسات البرمجة</h2>
@@ -70,7 +153,6 @@
         </div>
     </section>
 
-    <!-- كورسات إدارة الأعمال -->
     <section id="business-courses">
         <div class="container">
             <h2>كورسات إدارة الأعمال</h2>
@@ -88,94 +170,7 @@
             <p>جميع الحقوق محفوظة &copy; 2024</p>
         </div>
     </footer>
-    <style>
-        /* ملف style.css */
-
-/* الأساسيات */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    color: #333;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-/* الرأس (Header) */
-header {
-    background-color: #007BFF;
-    color: white;
-    padding: 20px 0;
-}
-
-header nav ul {
-    list-style-type: none;
-    padding: 0;
-    text-align: center;
-}
-
-header nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-header nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-header nav ul li a:hover {
-    text-decoration: underline;
-}
-
-/* أقسام الكورسات */
-section {
-    padding: 40px 0;
-    background-color: #f4f4f4;
-    margin: 20px 0;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-section h2 {
-    color: #007BFF;
-}
-
-section ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-section ul li {
-    margin: 10px 0;
-}
-
-section ul li a {
-    text-decoration: none;
-    font-size: 18px;
-    color: #333;
-}
-
-section ul li a:hover {
-    color: #007BFF;
-}
-
-/* الفوتر (Footer) */
-footer {
-    background-color: #007BFF;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
-
-    </style>
 </body>
 </html>
+
+
