--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             bottom: 0;
             width: 100%;
         }
+
+        footer .by-author {
+            font-weight: bold; /* الخط العريض */
+        }
     </style>
 </head>
 <body>
@@ -168,9 +172,8 @@
     <footer>
         <div class="container">
             <p>جميع الحقوق محفوظة &copy; 2024</p>
+            <p class="by-author">By Habiba Hatem</p> <!-- النص بخط عريض -->
         </div>
     </footer>
 </body>
 </html>
-
-
